WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267397
REGRESSION (
268069@main
): [iOS] Rotating from landscape to portrait causes date picker to run off screen
https://bugs.webkit.org/show_bug.cgi?id=267397
Summary
REGRESSION (268069@main): [iOS] Rotating from landscape to portrait causes da...
Aditya Keerthi
Reported
2024-01-10 22:27:14 PST
rdar://118972687
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-01-10 22:35:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22645
EWS
Comment 2
2024-01-11 09:57:46 PST
Committed
272922@main
(ea28020d4d41): <
https://commits.webkit.org/272922@main
> Reviewed commits have been landed. Closing PR #22645 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug